- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.12.5, 5.13.1, 5.14.0 Beta 1
- 
    None
- 
        
- 
        d58008c4310f99d0faebcfb2fd9aa9296b813ecf (qt/qtwayland/5.15)
They exit(1) with a warning instead.
On the other platforms, this is solved by adding a dummy screen when there are no real screens.
- relates to
- 
                    QTBUG-93867 QtWayland: qt sample apps occur a segmentation fault by display port hot plug event. -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-79111 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 279291,9 | Client: Support running with no screens | 5.15 | qt/qtwayland | Status: MERGED | +2 | 0 | 
| 279292,5 | Client: Add test for a compositor with no outputs | 5.15 | qt/qtwayland | Status: MERGED | -1 | 0 | 
| 279293,3 | Client: Add test for removing and adding a screen at runtime | 5.15 | qt/qtwayland | Status: MERGED | -1 | 0 |